# nano-vllm

./: .gitignore  .pre-commit-config.yaml  AF_DYNAMIC_PIPELINE_DESIGN.md  AGENTS.md  BUGFIX_TWO_GPU_PD.md  CHANGELOG_M1.md  CHANGELOG_M2.md  CHANGELOG_PIPELINE.md  CLAUDE.md  COMMIT_SUMMARY.md  DECODE_PIPELINE_PLAN.md  Dockerfile  GREEN_CONTEXT_FAQ.md  GREEN_CONTEXT_PERFORMANCE_ANALYSIS.md  IMPLEMENTATION_COMPLETE_M1_M2.md  IMPLEMENTATION_SUMMARY.md  LEARNING_PATH.md  M1_TWO_GPU_PD_SEPARATION.md  M2_DECODE_PIPELINE.md  NOTES.md  OPTIMIZATION_ROADMAP.md  PD_INTEGRATION_TO_SEPARATION.md  PIPELINE_README.md  QUICKSTART_PIPELINE.md  QUICKSTART_TWO_GPU.md  README.md  README_zh.md  TEST_REPORT.md  architecture.md  bench.py  bench_cb.py  bench_cb_online.py  bench_chunked_prefill.py  bench_cudagraph.py  bench_multimodal.py  bench_qwen3_5.py  bench_resumable_priority.py  career-analysis.md  decode_pipeline_case_study.py  environment.yml  (+19 more)
docs/: Engineer.csv  avg_feature_table.md  detailed-design.md  interface_reference.md  nano_vllm_feature_brief.md  nanovllm.drawio  overview-design.md  project_delivery_overview.md  structures.md
nanovllm/: __init__.py  config.py  llm.py  sampling_params.py
nanovllm/avg/: __init__.py  adapters.py  constants.py  director.py  prompt.py  schema.py
nanovllm/distributed/: __init__.py  cpu_offload_connector.py  pd_deploy.py
nanovllm/engine/: block_manager.py  green_manager.py  llm_engine.py  (+4 more)
scripts/: demo_secure_flow.py  run_example_with_trace.py
test/: test_layernorm.py
tests/: test_avg.py  test_resumable_priority.py  test_scheduler.py
(+68 files in other folders)
